# candigv2-download-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mock/: clinical.json
src/client/: auth.py  clinical_helpers.py  config.py  download_helpers.py  genomics_helpers.py  main copy.py  main.py  router.py
