[project]
name = "candigv2-download-client"
version = "0.1.0"
description = "CanDIGv2 download client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "tqdm",
    "pandas",
]

[project.scripts]
candigv2-client = "client.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pytest-dependency",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]